Fix the footer on mobile

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -109,13 +109,12 @@ img {
   padding-top: 16px;
   padding-bottom: 16px;
   text-align: center;
-  float: left;
 }
 
 .footer-column {
   display: inline-block;
-  width: 50%;
-  float: left;
+  margin-left: 50px;
+  margin-right: 50px;
 }
 
 .content-container {
